force-app/main/default/objects/Work_Order__c/fields/Appoint_Date_TIme__c.field-meta.xml
<CustomField>
    <fullName>Appoint_Date_TIme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appoint Date/Time</label>
    <type>DateTime</type>
</CustomField>