force-app/main/default/objects/Work_Order__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>