force-app/main/default/objects/Work_Order__c/fields/Is_My_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Created__c</fullName>
    <description>check if current user is the creator of listed work order on list view</description>
    <formula>if(CreatedById = $User.Id, true, false)</formula>
    <label>Is My Created</label>
    <type>Checkbox</type>
</CustomField>