force-app/main/default/objects/Work_Order__c/fields/Is_My_Outbox__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Outbox__c</fullName>
    <description>check if current user have id in previous owner list id</description>
    <formula>if(CONTAINS(Previous_Owner_List_ID__c,$User.Id) , true, false)</formula>
    <label>Is My Outbox</label>
    <type>Checkbox</type>
</CustomField>