force-app/main/default/objects/Work_Order__c/fields/Is_My_Team__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Team__c</fullName>
    <description>Check If Owner of work order is queue and the same branch with user</description>
    <formula>IF(OR(CONTAINS( Owner:Queue.DeveloperName , $User.RTL_Branch_Code__c ), Owner:User.RTL_Branch_Code__c = $User.RTL_Branch_Code__c) &amp;&amp; NOT( ISBLANK( $User.RTL_Branch_Code__c ))
    , TRUE
    , IF( OR(CONTAINS( Owner:Queue.DeveloperName , TEXT($User.Segment__c) ),  TEXT(Owner:User.Segment__c) = TEXT($User.Segment__c) )
     &amp;&amp; NOT( ISBLANK( TEXT($User.Segment__c) ))
        , TRUE
        , FALSE ))</formula>
    <label>Is My Team</label>
    <type>Checkbox</type>
</CustomField>