force-app/main/default/objects/Work_Order__c/fields/Is_My_WO__c.field-meta.xml
<CustomField>
    <fullName>Is_My_WO__c</fullName>
    <formula>if(Owner:User.Id = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My WO</label>
    <type>Checkbox</type>
</CustomField>