force-app/main/default/objects/Work_Order__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Job Types of Work Order, each job type dynamically validate data.</description>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>Loan Registered</fullName>
            </value>
            <value>
                <fullName>Loan Paper</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Kerry</fullName>
            </value>
            <value>
                <fullName>Post – EMS</fullName>
            </value>
            <value>
                <fullName>Post – Register</fullName>
            </value>
            <value>
                <fullName>Post – Normal</fullName>
            </value>
            <value>
                <fullName>Order Transfer</fullName>
                <isActive>false</isActive>
                <label>Order Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>