force-app/main/default/objects/Work_Order__c/fields/Last_Change_Owner_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Owner_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Change Owner Date/Time</label>
    <type>DateTime</type>
</CustomField>