force-app/main/default/objects/Work_Order__c/fields/Loan_Model__c.field-meta.xml
<CustomField>
    <fullName>Loan_Model__c</fullName>
    <label>Loan Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>