force-app/main/default/objects/Work_Order__c/fields/Messenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Messenger_Name__c</fullName>
    <label>Messenger Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UINFO</fullName>
            </value>
            <value>
                <fullName>Pivot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>