force-app/main/default/objects/Work_Order__c/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>