force-app/main/default/objects/Work_Order__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName +&apos; &apos;+ Opportunity__r.Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>