force-app/main/default/objects/Work_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ส่ง-รับ</fullName>
                <default>true</default>
                <label>ส่ง-รับ</label>
            </value>
            <value>
                <fullName>ส่งอย่างเดียว</fullName>
            </value>
            <value>
                <fullName>รับอย่างเดียว</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>