force-app/main/default/objects/Work_Order__c/fields/Other_Fax_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Fax_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other/Fax Phone</label>
    <type>Phone</type>
</CustomField>