force-app/main/default/objects/Work_Order__c/fields/Prefer_Address__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Address__c</fullName>
    <label>Prefer Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
            <value>
                <fullName>Registered Address</fullName>
            </value>
            <value>
                <fullName>Other Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>