force-app/main/default/objects/Work_Order__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>