force-app/main/default/objects/Work_Order__c/fields/Top_Up_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Loan_Status__c</fullName>
    <label>Top Up Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Duplicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>