force-app/main/default/objects/Work_Order__c/fields/Work_Order_Note__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Order Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>