force-app/main/default/objects/Work_Order__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <label>Work Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Send app to customer</fullName>
            </value>
            <value>
                <fullName>Send back to Messenger</fullName>
            </value>
            <value>
                <fullName>Receive Doc from Customer</fullName>
            </value>
            <value>
                <fullName>App Received Complete</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Send App to Operation</fullName>
            </value>
            <value>
                <fullName>Received App from Operation</fullName>
            </value>
            <value>
                <fullName>Follow up Document</fullName>
            </value>
            <value>
                <fullName>Incomplete App</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Send App to RSL</fullName>
                <isActive>false</isActive>
                <label>Send App to RSL</label>
            </value>
            <value>
                <fullName>Send back to sales</fullName>
                <isActive>false</isActive>
                <label>Send back to sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>