force-app/main/default/objects/Work_Order__c/recordTypes/Active_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Active_Work_Order</fullName>
    <active>true</active>
    <label>Active Work Order</label>
</RecordType>