force-app/main/default/objects/Work_Order__c/recordTypes/Closed_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Closed_Work_Order</fullName>
    <active>true</active>
    <label>Closed Work Order</label>
</RecordType>