force-app/main/default/objects/Work_Order__c/validationRules/Appoint_Date_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Appoint_Date_Today</fullName>
    <active>true</active>
    <description>Appoint date must equal or greater than today</description>
    <errorConditionFormula>IF( (ISNEW() || ISCHANGED(Appoint_Date_TIme__c)) &amp;&amp;
			(DATEVALUE(Appoint_Date_TIme__c) &lt; DATE( YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY())))
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Appoint_Date_TIme__c</errorDisplayField>
    <errorMessage>Appoint Date is Invalid. Appoint Date Cannot Be The Past Date.</errorMessage>
</ValidationRule>