force-app/main/default/objects/Work_Order__c/validationRules/Appoint_Time_Now.validationRule-meta.xml
<ValidationRule>
    <fullName>Appoint_Time_Now</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (ISNEW() || ISCHANGED(Appoint_Date_TIme__c)) 
			&amp;&amp; (DATEVALUE(Appoint_Date_TIme__c) = TODAY() 
			&amp;&amp; (TIMEVALUE(Appoint_Date_TIme__c+420/1440) &lt; TIMEVALUE(NOW()+420/1440)))
,TRUE
,FALSE)</errorConditionFormula>
    <errorDisplayField>Appoint_Date_TIme__c</errorDisplayField>
    <errorMessage>Appoint Time is Invalid. Appoint Time Cannot Be Less Than Current Time.</errorMessage>
</ValidationRule>