force-app/main/default/objects/Work_Order__c/validationRules/Job_Type_Is_Fax.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Type_Is_Fax</fullName>
    <active>true</active>
    <description>If Job Type = Fax, field “Other/Fax Phone” cannot be blank.</description>
    <errorConditionFormula>IF(ISPICKVAL(Job_Type__c, &quot;Fax&quot;) &amp;&amp; ISBLANK(Other_Fax_Phone__c)
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Other_Fax_Phone__c</errorDisplayField>
    <errorMessage>Job type is Fax, Other/Fax Phone cannot be blank.</errorMessage>
</ValidationRule>