force-app/main/default/objects/Work_Order__c/validationRules/Job_Type_Is_Messenger_App_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Type_Is_Messenger_App_Date</fullName>
    <active>true</active>
    <description>job type = messenger, appoint date cannot be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Job_Type__c,&quot;Messenger&quot;)
&amp;&amp; ISBLANK( TEXT(Appoint_Date_TIme__c) )  
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Appoint_Date_TIme__c</errorDisplayField>
    <errorMessage>Job Type is Messenger, Appoint Date/Time can not be blank</errorMessage>
</ValidationRule>