force-app/main/default/objects/Work_Order__c/validationRules/Job_Type_Is_Messenger_msg_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Type_Is_Messenger_msg_name</fullName>
    <active>true</active>
    <description>Job type = Messenger, Field “Messenger Name” and “Prefer Address” cannot be blank.</description>
    <errorConditionFormula>IF(ISPICKVAL(Job_Type__c,&quot;Messenger&quot;)
&amp;&amp; ISBLANK( TEXT(Messenger_Name__c) )
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Messenger_Name__c</errorDisplayField>
    <errorMessage>Job Type is Messenger, Messenger Name can not be blank</errorMessage>
</ValidationRule>