force-app/main/default/objects/Work_Order__c/validationRules/Job_Type_Is_Messenger_prf_address.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Type_Is_Messenger_prf_address</fullName>
    <active>true</active>
    <description>Job type = Messenger, Field “Messenger Name” and “Prefer Address” cannot be blank.</description>
    <errorConditionFormula>IF(ISPICKVAL(Job_Type__c,&quot;Messenger&quot;)
&amp;&amp; ISBLANK( TEXT( Prefer_Address__c ) )
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Prefer_Address__c</errorDisplayField>
    <errorMessage>Job Type is Messenger, Prefer Address can not be blank</errorMessage>
</ValidationRule>