force-app/main/default/objects/Work_Order__c/validationRules/Job_Type_Is_Post.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Type_Is_Post</fullName>
    <active>true</active>
    <description>If Job Type = Post (all post), “Prefer Address” cannot be blank.</description>
    <errorConditionFormula>IF(CONTAINS(TEXT(Job_Type__c),&quot;Post&quot;) 
&amp;&amp; ISBLANK( TEXT(Prefer_Address__c))
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Prefer_Address__c</errorDisplayField>
    <errorMessage>Job type is Post (all post), Prefer Address cannot be blank.</errorMessage>
</ValidationRule>