force-app/main/default/objects/Work_Order__c/validationRules/Kerry_Job_Type_Validation_Prf_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Kerry_Job_Type_Validation_Prf_Address</fullName>
    <active>true</active>
    <description>Job type is Kerry check Field, Prefer Address and Prefer Phone</description>
    <errorConditionFormula>IF(ISPICKVAL(Job_Type__c, &quot;Kerry&quot;) 
			&amp;&amp; ISBLANK(TEXT(Prefer_Address__c))
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Prefer_Address__c</errorDisplayField>
    <errorMessage>Please enter Prefer Address</errorMessage>
</ValidationRule>