force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Address_Is_Other_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Address_Is_Other_Address</fullName>
    <active>true</active>
    <description>If “Prefer Address” = “Other Address”, Field “Other Address” cannot be blank.</description>
    <errorConditionFormula>IF( ISPICKVAL(Prefer_Address__c, &quot;Other Address&quot;)
&amp;&amp; ISBLANK(Other_Address__c)
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Other_Address__c</errorDisplayField>
    <errorMessage>Prefer Address is Other Address, Other Address can not be blank</errorMessage>
</ValidationRule>