force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Address_Office.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Address_Office</fullName>
    <active>true</active>
    <description>prefer address = office address, office address cannot be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Prefer_Address__c, &quot;Office Address&quot;)
&amp;&amp; ISBLANK(Office_Address__c)  
,TRUE
,FALSE)</errorConditionFormula>
    <errorDisplayField>Office_Address__c</errorDisplayField>
    <errorMessage>Prefer Address is Office Address but Office Address is blank. Please change Prefer Address.</errorMessage>
</ValidationRule>