force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Phone_Alternative.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Phone_Alternative</fullName>
    <active>true</active>
    <description>prefer phone = alternative phone, alternative phone cannot be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Prefer_Phone__c, &quot;Alternative Phone&quot;)
  &amp;&amp; ISBLANK(Alternative_Phone__c)
,TRUE
,FALSE)</errorConditionFormula>
    <errorDisplayField>Alternative_Phone__c</errorDisplayField>
    <errorMessage>Prefer Phone is Alternative Phone but Alternative Phone is blank. Please change Prefer Phone.</errorMessage>
</ValidationRule>