force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Phone_Home.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Phone_Home</fullName>
    <active>true</active>
    <description>prefer phone = home phone, home phone cannot be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Prefer_Phone__c, &quot;Home Phone&quot;)
  &amp;&amp; ISBLANK(Home_Phone__c)
,TRUE
,FALSE)</errorConditionFormula>
    <errorDisplayField>Home_Phone__c</errorDisplayField>
    <errorMessage>Prefer Phone is Home Phone but Home Phone is blank. Please change Prefer Phone.</errorMessage>
</ValidationRule>