force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Phone_Is_Fax.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Phone_Is_Fax</fullName>
    <active>true</active>
    <description>If Prefer Phone = Fax, Field “Other/Fax Phone” cannot be blank.</description>
    <errorConditionFormula>IF(ISPICKVAL(Prefer_Phone__c, &quot;Fax&quot;)
&amp;&amp; ISBLANK(Other_Fax_Phone__c)
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Other_Fax_Phone__c</errorDisplayField>
    <errorMessage>Prefer Phone is Fax, Other/Fax Phone cannot be blank.</errorMessage>
</ValidationRule>