force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Phone_Is_Other_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Phone_Is_Other_Phone</fullName>
    <active>true</active>
    <description>“Prefer Phone” = “Other Phone”, Field “Other/Fax Phone” cannot be blank.</description>
    <errorConditionFormula>IF( ISPICKVAL(Prefer_Phone__c, &quot;Other Phone&quot;)
&amp;&amp; ISBLANK(Other_Fax_Phone__c)
, TRUE
, FALSE
)</errorConditionFormula>
    <errorDisplayField>Other_Fax_Phone__c</errorDisplayField>
    <errorMessage>Prefer Phone is Other Phone, Other/Fax Phone cannot be blank.</errorMessage>
</ValidationRule>