force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Phone_Mobile.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Phone_Mobile</fullName>
    <active>true</active>
    <description>Check if prefer phone = mobile then mobile phone cannot be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Prefer_Phone__c, &quot;Mobile Phone&quot;)
		&amp;&amp; ISBLANK(Mobile_Phone__c)
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Mobile_Phone__c</errorDisplayField>
    <errorMessage>Prefer Phone is Mobile Phone but Mobile Phone is blank. Please change Prefer Phone.</errorMessage>
</ValidationRule>