force-app/main/default/objects/Work_Order__c/validationRules/Prefer_Phone_Office.validationRule-meta.xml
<ValidationRule>
    <fullName>Prefer_Phone_Office</fullName>
    <active>true</active>
    <description>prefer phone = office phone, office phone cannot be blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Prefer_Phone__c, &quot;Office Phone&quot;)
  &amp;&amp; ISBLANK(Office_Phone__c)
,TRUE
,FALSE)</errorConditionFormula>
    <errorDisplayField>Office_Phone__c</errorDisplayField>
    <errorMessage>Prefer Phone is Office Phone but Office Phone is blank. Please change Prefer Phone.</errorMessage>
</ValidationRule>