force-app/main/default/objects/Work_Order__c/validationRules/Remark_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Remark_Cannot_Change</fullName>
    <active>true</active>
    <description>remark field cannot change if the user is not the creator</description>
    <errorConditionFormula>IF( ($User.Id != CreatedById) &amp;&amp; ISCHANGED( Remark__c )
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Remark__c</errorDisplayField>
    <errorMessage>Sorry, you do not have permission to edit this field</errorMessage>
</ValidationRule>