force-app/main/default/objects/Work_Order__c/validationRules/Top_Up_Loan_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Top_Up_Loan_Rejected</fullName>
    <active>true</active>
    <description>if top up loan = reject, information must have at least 1 NO</description>
    <errorConditionFormula>IF(ISPICKVAL(Top_Up_Loan_Status__c, &quot;Rejected&quot;)
		&amp;&amp; !ISPICKVAL(Verify__c,&quot;No&quot;) &amp;&amp; !ISPICKVAL(Tenure__c,&quot;No&quot;) &amp;&amp;
					!ISPICKVAL(Principle__c,&quot;No&quot;) &amp;&amp; !ISPICKVAL(Loan_Model__c,&quot;No&quot;) &amp;&amp;
					!ISPICKVAL(Account_Number__c,&quot;No&quot;)
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Top_Up_Loan_Status__c</errorDisplayField>
    <errorMessage>กรณีกด Reject ต้องมีหัวข้อ No อย่างน้อย 1 ข้อ</errorMessage>
</ValidationRule>