force-app/main/default/objects/Work_Order__c/validationRules/Top_Up_Loan_Rejected_Acc_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Top_Up_Loan_Rejected_Acc_Number</fullName>
    <active>true</active>
    <description>if top up loan status = Rejected, Verify /Principle /Tenure/ Loan Model/ Account Number are not blank</description>
    <errorConditionFormula>IF(ISPICKVAL(Top_Up_Loan_Status__c, &quot;Rejected&quot;)
		&amp;&amp; ISBLANK(TEXT(Account_Number__c))
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>Account_Number__c</errorDisplayField>
    <errorMessage>กรณี Rejected ต้องใส่ข้อมูลให้ครบถ้วน</errorMessage>
</ValidationRule>